Edit readme & example

--- a/client.yml
+++ b/client.yml
@@ -5,7 +5,7 @@
     "default_policy": "deny",
     "enable_token_persistence": true,
     "tokens":{
-      "agent":"55c5c5d2-362b-4b78-8667-4c2e44e3faeb"
+      "agent": "your token"
     }
   }
 }
