--- a/server.yml
+++ b/server.yml
@@ -7,7 +7,7 @@
     "down_policy":"extend-cache",
     "enable_token_persistence":true,
     "tokens":{
-      "master":"55c5c5d2-362b-4b78-8667-4c2e44e3faeb"
+      "master": "your token"
     }
   }
 }
